# twilio-sync-sdk

./: .gitignore  LICENSE.txt  README.md  build.gradle  check-module-changes.gradle  check-module-version-exists.gradle  cliff.toml  dependency-constraints.gradle  disable-metadata-subtasks.gradle  gradle.properties  logo-styles.css  need-publish-module.gradle  prepare-pom-xml.gradle  settings.gradle  settings.gradle.kts
.circleci/: config.yml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: release-android-sync.md
BuildScripts/: build-docs-kotlin-ios.sh  build-sync-tests-kotlin-ios.sh  build-sync-xcframework-kotlin-ios.sh  clean-build-outputs.sh  generate-test-constants-kotlin-ios.sh  install-ios-certificates.sh  parse-sonatype-git-tag.sh  pin-android.sh  push-sonatype-git-tag.sh  run-android-tests-in-gcloud.sh  run-sdk-android-tests-in-gcloud.sh  run-tests-in-gcloud-kotlin-ios.sh  run-tests-kotlin-ios.rb  set-manual-signing.rb
gradle/wrapper/: gradle-wrapper.properties
sbom/: README.md  android-convo.sbom  android-native-sync.sbom  android-sync.sbom  ios-commonLib.sbom  ios-conversations.sbom  ios-stateMachine.sbom  ios-sync.sbom  ios-twilsock.sbom  shared-internal.sbom  shared-public.sbom  shared-sync.sbom  twilsock.sbom
sbom/android/: androidx-security.sbom  base.sbom  jni-mate-int.sbom  jni-mate.sbom  mapbox-jni.sbom  nv-websocket-client.sbom  relinker.sbom  slf4j.sbom  sqldelight.sbom
sbom/ios/: base.sbom  reachability.sbom
sbom/shared/: annotations.sbom  boost.sbom  boringssl.sbom  ktor.sbom  (+12 more)
tools/sbom/: Cargo.toml  Justfile
tools/sbom/src/: main.rs
(+392 files in other folders)
