[package]
name = "sbom"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive", "wrap_help", "unicode"] }
indexmap = "1.9.2"
reqwest = { version = "0.11.14", features = ["blocking","rustls-tls", "trust-dns", "gzip", "brotli"], default-features = false }
serde = "1.0.152"
serde_derive = "1.0.152"
thiserror = "1.0.38"
toml = { version = "0.7.2", features = ["preserve_order"] }
tokio = "1.26.0"
